welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:7: error: too many arguments for method coupstylo: ()Unit
                  else {gauche();gauche();coupstylo();avance()}}};coupstylo{};prendBiscuit()
                                                                           ^